# dgxtop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.out  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.pybuild/cpython3_3.12_dgxtop/: .pydistutils.cfg
deb_build/: dgxtop_1.0.0-1_all.deb  dgxtop_1.1.0-1_all.deb
debian/: changelog  control  copyright  debhelper-build-stamp  dgxtop.postinst.debhelper  dgxtop.prerm.debhelper  dgxtop.substvars  files  rules
debian/dgxtop/DEBIAN/: control  md5sums  postinst  prerm
dgxtop/: .network_monitor.py.swp  ARCHITECTURE.md  CODE_REVIEW_SUMMARY.md  REDUNDANCY_ANALYSIS.md  __init__.py  config.py  disk_monitor.py  get-roce-counts.py  get_ifc.py  gpu_monitor.py  ibifc.py  logger.py  main.py  network_monitor.py  rich_ui.py  roce_stats.py  system_monitor.py  test_network_monitor.py
