[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgxtop"
version = "1.0.0"
description = "System monitor for NVIDIA DGX SPARK - dgxtop style UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DGXTOP Ubuntu Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "psutil>=5.8.0",
    "rich>=13.0.0",
]

[project.scripts]
dgxtop = "dgxtop.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dgxtop*"]
